--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "date-fns": "^2.28.0",
         "moment": "^2.27.0",
         "vue": "^3.2.31",
+        "vue-core-video-player": "^0.2.0",
         "vue3-datepicker": "^0.3.2"
     }
 }
